--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,4 +32,4 @@ jobs:
         run: docker build -t ${{ secrets.DOCKER_USERNAME }}/testecom-auth-service:latest .
 
       - name: Push to Docker Hub
-        run: docker push ${{ secrets.DOCKER_USERNAME }}}/testecom-auth-service:latest
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/testecom-auth-service:latest
